--- a/index.html
+++ b/index.html
@@ -16,52 +16,65 @@
     <ol> 
       <li>
         <p>Do you want to work in industry or academia?</p>
-        <input type="radio" name="workplace" value="Industry" id="industry" checked>
-        <label for="industry">Industry</label><br>
-        <input type="radio" name="workplace" value="Academia" id="academia">
-        <label for="academia">Academia</label><br>
-        <input type="radio" name="workplace" value="Unemployed" id="unemployed">
-        <label for="unemployed">I really don't want a job</label><br>
+        <input type="radio" name="workplace" value="Industry" id="industry" class="Python" checked>
+        <label for="industry" class="Python">Industry</label><br>
+        <input type="radio" name="workplace" value="Academia" id="academia" class="R">
+        <label for="academia" class="R">Academia</label><br>
+        <input type="radio" name="workplace" value="Unemployed" id="unemployed" class="Assembly">
+        <label for="unemployed" class="Assembly">I really don't want a job</label><br>
       </li>
       <li>
         <p>Are you more interested in all-purpose programming or statistics?</p>
-        <input type="radio" name="interest" value="CS" id="cs" checked>
-        <label for="cs">Programming</label>
-        <input type="radio" name="interest" value="Statistics" id="statistics">
-        <label for="statistics">Statistics</label>
+        <input type="radio" name="interest" value="CS" id="cs" class="Python" checked>
+        <label for="cs" class="Python">Programming</label>
+        <input type="radio" name="interest" value="Statistics" id="statistics" class="R">
+        <label for="statistics" class="R">Statistics</label>
       </li>
       <li>
         <p>Do you like being useful?</p>
         <input type="radio" name="useful" value="Yes" id="yes-useful" checked>
         <label for="yes-useful">Yes</label>
-        <input type="radio" name="useful" value="No" id="not-useful">
-        <label for="not-useful">No</label>
+        <input type="radio" name="useful" value="No" id="not-useful" class="Assembly">
+        <label for="not-useful" class="Assembly">No</label>
       </li>
       <li>
         <p>Which I/O device do you prefer?</p>
         <input type="radio" name="device" value="Keyboard" id="keyboard" checked>
         <label for="keyboard">Keyboard</label>
-        <input type="radio" name="device" value="Punch-card" id="punch-card">
-        <label for="punch-card">Punch card</label>
+        <input type="radio" name="device" value="Punch-card" id="punch-card" class="Assembly">
+        <label for="punch-card" class="Assembly">Punch card</label>
       </li>
       <li>
         <p>Which is more important to you: machine learning or data analysis and visualization?</p>
-        <input type="radio" name="important" value="ML" id="ml" checked>
-        <label for="ml">Machine Learning</label>
-        <input type="radio" name="important" value="DAV" id="dav">
-        <label for="dav">Data Analysis and Visualization?</label>
+        <input type="radio" name="important" value="ML" id="ml" class="Python" checked>
+        <label for="ml" class="Python">Machine Learning</label>
+        <input type="radio" name="important" value="DAV" id="dav" class="R">
+        <label for="dav" class="R">Data Analysis and Visualization?</label>
       </li>
       <li>
         <p>Which community sounds most appealing: modestly-sized and specialized with a highly-curated, centralized, deep ecosystem of open-source libraries, or the largest programming community on the planet awash with resources of varying quality?</p>
-        <input type="radio" name="community" value="Uh" id="uh" checked>
-        <label for="uh">That's the most leading question I've ever seen</label><br>
-        <input type="radio" name="community" value="First" id="first">
-        <label for="first">The first one</label><br>
-        <input type="radio" name="community" value="Second" id="second">
-        <label for="second">The second</label><br>
+        <input type="radio" name="community" value="Uh" id="uh" class="Assembly" checked>
+        <label for="uh" class="Assembly">That's the most leading question I've ever seen</label><br>
+        <input type="radio" name="community" value="First" id="first" class="R">
+        <label for="first" class="R">The first one</label><br>
+        <input type="radio" name="community" value="Second" id="second" class="Python">
+        <label for="second" class="Python">The second</label><br>
       </li>
     </ol>
+    <button>Submit</button>
   </form>
+
+  <div id="R" class="hidden">
+    <p><strong>R</strong> is the best language for you.</p>
+  </div>
+
+  <div id="Python" class="hidden">
+    <p><strong>Python</strong> should be your next language.</p>
+  </div>
+
+  <div id="Assembly" class="hidden">
+    <p><strong>Assembly</strong> sounds up your alley.</p>
+  </div>
 
 </body>
 </html>
