WIP: Use array to return suggested language based on loop

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
         <input type="radio" name="question6" value="Second" id="second" class="Python">
         <label for="second" class="Python">The second</label><br>
       </li>
+      <li>
+        <p>Hipster or Conformist?</p>
+        <input type="radio" name="question7" value="Slightly-hipster" id="slightly-hipster" class="R" checked>
+        <label for="slightly-hipster" class="R">Slightly hipster</label><br>
+        <input type="radio" name="question7" value="Conformist" id="conformist" class="Python">
+        <label for="conformist" class="Python">Conformist</label><br>
+        <input type="radio" name="question7" value="Mega-hipster" id="mega-hipster" class="Assembly">
+        <label for="mega-hipster" class="Assembly">Massively hipster</label><br>
+      </li>
     </ol>
     <button>Submit</button>
   </form>
