Minimize branching with nested loop over object, save ascripts-alt.js

--- a/index.html
+++ b/index.html
@@ -12,72 +12,72 @@
     <ol> 
       <li>
         <p>Do you want to work in industry or academia?</p>
-        <input type="radio" name="question1" value="Industry" id="industry" class="Python" checked>
-        <label for="industry" class="Python">Industry</label><br>
-        <input type="radio" name="question1" value="Academia" id="academia" class="R">
-        <label for="academia" class="R">Academia</label><br>
-        <input type="radio" name="question1" value="Unemployed" id="unemployed" class="Assembly">
-        <label for="unemployed" class="Assembly">I really don't want a job</label><br>
+        <input type="radio" name="question1" value="Industry" id="industry" class="python" checked>
+        <label for="industry" class="python">Industry</label><br>
+        <input type="radio" name="question1" value="Academia" id="academia" class="r">
+        <label for="academia" class="r">Academia</label><br>
+        <input type="radio" name="question1" value="Unemployed" id="unemployed" class="assembly">
+        <label for="unemployed" class="assembly">I really don't want a job</label><br>
       </li>
       <li>
         <p>Are you more interested in all-purpose programming or statistics?</p>
-        <input type="radio" name="question2" value="CS" id="cs" class="Python" checked>
-        <label for="cs" class="Python">Programming</label>
-        <input type="radio" name="question2" value="Statistics" id="statistics" class="R">
-        <label for="statistics" class="R">Statistics</label>
+        <input type="radio" name="question2" value="CS" id="cs" class="python" checked>
+        <label for="cs" class="python">Programming</label>
+        <input type="radio" name="question2" value="Statistics" id="statistics" class="r">
+        <label for="statistics" class="r">Statistics</label>
       </li>
       <li>
         <p>Do you like being useful?</p>
         <input type="radio" name="question3" value="Yes" id="yes-useful" class="Non-assembly" checked>
         <label for="yes-useful" class="Non-assembly">Yes</label>
-        <input type="radio" name="question3" value="No" id="not-useful" class="Assembly">
-        <label for="not-useful" class="Assembly">No</label>
+        <input type="radio" name="question3" value="No" id="not-useful" class="assembly">
+        <label for="not-useful" class="assembly">No</label>
       </li>
       <li>
         <p>Which I/O device do you prefer?</p>
         <input type="radio" name="question4" value="Keyboard" id="keyboard" class="Non-assembly" checked>
         <label for="keyboard" class="Non-assembly">Keyboard</label>
-        <input type="radio" name="question4" value="Punch-card" id="punch-card" class="Assembly">
-        <label for="punch-card" class="Assembly">Punch card</label>
+        <input type="radio" name="question4" value="Punch-card" id="punch-card" class="assembly">
+        <label for="punch-card" class="assembly">Punch card</label>
       </li>
       <li>
         <p>Which is more important to you: machine learning or data analysis and visualization?</p>
-        <input type="radio" name="question5" value="ML" id="ml" class="Python" checked>
-        <label for="ml" class="Python">Machine Learning</label>
-        <input type="radio" name="question5" value="DAV" id="dav" class="R">
-        <label for="dav" class="R">Data Analysis and Visualization?</label>
+        <input type="radio" name="question5" value="ML" id="ml" class="python" checked>
+        <label for="ml" class="python">Machine Learning</label>
+        <input type="radio" name="question5" value="DAV" id="dav" class="r">
+        <label for="dav" class="r">Data Analysis and Visualization</label>
       </li>
       <li>
-        <p>Which community sounds most appealing: modestly-sized and specialized with a highly-curated, centralized, deep ecosystem of open-source libraries, or the largest programming community on the planet awash with resources of varying quality?</p>
-        <input type="radio" name="question6" value="Uh" id="uh" class="Assembly" checked>
-        <label for="uh" class="Assembly">That's the most leading question I've ever seen</label><br>
-        <input type="radio" name="question6" value="First" id="first" class="R">
-        <label for="first" class="R">The first one</label><br>
-        <input type="radio" name="question6" value="Second" id="second" class="Python">
-        <label for="second" class="Python">The second</label><br>
+        <p>Which community sounds most appealing: modestly-sized and specialized with a highly-curated, centralized, vast and deep ecosystem of open-source libraries, or the largest programming community on the planet awash with resources of varying quality?</p>
+        <input type="radio" name="question6" value="Uh" id="uh" class="assembly" checked>
+        <label for="uh" class="assembly">That's the most leading question I've ever seen</label><br>
+        <input type="radio" name="question6" value="First" id="first" class="r">
+        <label for="first" class="r">The first one</label><br>
+        <input type="radio" name="question6" value="Second" id="second" class="python">
+        <label for="second" class="python">The second</label><br>
       </li>
       <li>
         <p>Hipster or Conformist?</p>
-        <input type="radio" name="question7" value="Slightly-hipster" id="slightly-hipster" class="R" checked>
-        <label for="slightly-hipster" class="R">Slightly hipster</label><br>
-        <input type="radio" name="question7" value="Conformist" id="conformist" class="Python">
-        <label for="conformist" class="Python">Conformist</label><br>
-        <input type="radio" name="question7" value="Mega-hipster" id="mega-hipster" class="Assembly">
-        <label for="mega-hipster" class="Assembly">Massively hipster</label><br>
+        <input type="radio" name="question7" value="Slightly-hipster" id="slightly-hipster" class="r" checked>
+        <label for="slightly-hipster" class="r">Slightly hipster</label><br>
+        <input type="radio" name="question7" value="Conformist" id="conformist" class="python">
+        <label for="conformist" class="python">Conformist</label><br>
+        <input type="radio" name="question7" value="Mega-hipster" id="mega-hipster" class="assembly">
+        <label for="mega-hipster" class="assembly">Massively hipster</label><br>
       </li>
     </ol>
     <button>Submit</button>
   </form>
 
-  <div id="R" class="hidden">
+  <div id="r" class="hidden">
     <p><strong>R</strong> is the best language for you.</p>
   </div>
 
-  <div id="Python" class="hidden">
+  <div id="python" class="hidden">
     <p><strong>Python</strong> should be your next language.</p>
   </div>
 
-  <div id="Assembly" class="hidden">
+  <div id="assembly" class="hidden">
     <p><strong>Assembly</strong> sounds up your alley.</p>
   </div>
 
