Add bootstrap jumbotron, card styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <form>
         <div class="card">
-          <h5 class="card-title">Do you want to work in industry or academia?</h5>
+          <h5 class="card-title">1.) Do you want to work in industry or academia?</h5>
           <ul class="list-unstyled">
             <li><input type="radio" name="question1" value="Industry" id="industry" class="python" checked>
             <label for="industry" class="python">Industry</label></li>
@@ -24,7 +24,7 @@
           </ul>
         </div>
         <div class="card">
-          <h5 class="card-title">Are you more interested in all-purpose programming or statistics?</h5>
+          <h5 class="card-title">2.) Are you more interested in all-purpose programming or statistics?</h5>
           <ul class="list-unstyled">
             <li><input type="radio" name="question2" value="CS" id="cs" class="python" checked>
             <label for="cs" class="python">Programming</label></li>
@@ -33,7 +33,7 @@
           </ul>
         </div>
         <div class="card">
-          <h5 class="card-title">Do you like being useful?</h5>
+          <h5 class="card-title">3.) Do you like being useful?</h5>
           <ul class="list-unstyled">
             <li><input type="radio" name="question3" value="Yes" id="yes-useful" class="Non-assembly" checked>
             <label for="yes-useful" class="Non-assembly">Yes</label></li>
@@ -42,7 +42,7 @@
           </ul>
         </div>
         <div class="card">
-          <h5 class="card-title">Which I/O device do you prefer?</h5>
+          <h5 class="card-title">4.) Which I/O device do you prefer?</h5>
           <ul class="list-unstyled">
             <li><input type="radio" name="question4" value="Keyboard" id="keyboard" class="Non-assembly" checked>
             <label for="keyboard" class="Non-assembly">Keyboard</label></li>
@@ -51,7 +51,7 @@
           </ul>
         </div>
         <div class="card">
-          <h5 class="card-title">Which is more important to you: machine learning or data analysis and visualization?</h5>
+          <h5 class="card-title">5.) Which is more important to you: machine learning or data analysis and visualization?</h5>
           <ul class="list-unstyled">
             <li><input type="radio" name="question5" value="ML" id="ml" class="python" checked>
             <label for="ml" class="python">Machine Learning</label></li>
@@ -60,7 +60,7 @@
           </ul>
         </div>
         <div class="card">
-          <h5 class="card-title">Which community sounds most appealing: modestly-sized and specialized with a highly-curated, centralized, vast and deep ecosystem of open-source libraries, or the largest programming community on the planet awash with resources of varying quality?</h5>
+          <h5 class="card-title">6.) Which community sounds most appealing: modestly-sized and specialized with a highly-curated, centralized, vast and deep ecosystem of open-source libraries, or the largest programming community on the planet awash with resources of varying quality?</h5>
           <ul class="list-unstyled">
             <li><input type="radio" name="question6" value="Uh" id="uh" class="assembly" checked>
             <label for="uh" class="assembly">That's the most leading question I've ever seen</label></li>
@@ -71,7 +71,7 @@
           </ul>
         </div>
         <div class="card">
-          <h5 class="card-title">Hipster or Conformist?</h5>
+          <h5 class="card-title">7.) Hipster or Conformist?</h5>
           <ul class="list-unstyled">
             <li><input type="radio" name="question7" value="Slightly-hipster" id="slightly-hipster" class="r" checked>
             <label for="slightly-hipster" class="r">Slightly hipster</label></li>
