Include information about each language; add more styling

--- a/index.html
+++ b/index.html
@@ -83,23 +83,43 @@
           </ul>
         </div>
       <div class="button-container">
-        <button class="btn btn-light">Submit</button>
+        <button class="btn btn-light m-3">Submit</button>
       </div>
     </form>
     <div id="results" class ="container">
       <div id="r" class="hidden">
         <h2><strong>R</strong> is the best language for you.</h2>
+        <h5>
+          R is a programming language for statistical computing and graphics supported by the R Core Team and the R Foundation for Statistical Computing. 
+          Created by statisticians Ross Ihaka and Robert Gentleman, R is used among data miners, bioinformaticians and statisticians for data analysis and developing statistical software.
+          Users have created packages to augment the functions of the R language. 
+        </h5>
+        <h5>
+          On top of base R, there is a wide-reaching set of integrated packages for top-to-bottom data processing and analysis called the TidyVerse. These packages center on the concept of 
+          "tidy data", an intuitive "wide" format for data tables where every column is a variable and every row is an observation. Each package in the TidyVerse is best optimized to work with
+          data in this format, and hence the packages which pertain to formatting raw data in this matter (dplyr and tidyr) are perhaps the most important to master first.
+        </h5>
       </div>
-
       <div id="python" class="hidden">
         <h2><strong>Python</strong> should be your next language.</h2>
+        <h5>
+          Python is a high-level, general-purpose programming language. 
+          Its design philosophy emphasizes code readability with the use of significant indentation.       
+        </h5>
+        <h5>
+          Python is dynamically-typed and garbage-collected. It supports multiple programming paradigms, including structured (particularly procedural), object-oriented and functional programming. 
+          It is often described as a "batteries included" language due to its comprehensive standard library.
+        </h5>
       </div>
-
       <div id="assembly" class="hidden">
         <h2><strong>Assembly</strong> sounds up your alley.</h2>
+        <h5>
+          In computer programming, assembly language, often referred to simply as Assembly and commonly abbreviated as ASM or asm, is any low-level programming language with a very strong correspondence 
+          between the instructions in the language and the architecture's machine code instructions. Assembly language usually has one statement per machine instruction (1:1), but constants, comments, 
+          assembler directives, symbolic labels of, e.g., memory locations, registers, and macros are generally also supported.         
+        </h5>
       </div>
     </div>
   </div>
-
 </body>
 </html>
